[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extract-hwp"
version = "0.1.0"
description = "Python library for extracting text from Korean HWP files (HWP 5.0 and HWPX formats)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "extract-hwp", email = "extract-hwp@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["hwp", "hwpx", "korean", "document", "text-extraction"]
dependencies = [
    "olefile>=0.46",
]

[project.urls]
"Homepage" = "https://github.com/thlee/extract-hwp"
"Bug Reports" = "https://github.com/thlee/extract-hwp/issues"
"Source" = "https://github.com/thlee/extract-hwp"


[tool.hatch.build.targets.wheel]
packages = ["src/extract_hwp"]
